<resources>

    <string name="app_name">社保自我认证</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">自我认证</string>
    
    <string name="phone_number">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="code">验证码</string>
    
    <string name="input_pwd">请输入密码</string>
	<string name="input_username">请输入用户名</string>
	<string name="code_input_error">验证码输入错误</string>
	
	<string name="toast_network_error">网络有问题，请检查您的网络连接</string>
	<string name="fyi_loading">数据访问中，请稍候...</string>
	
	<string name="login_success">登录成功</string>
	<string name="login_fail">登录失败</string>
	
	<string name="search_success">查询成功</string>
	<string name="search_fail">查询失败</string>
	
	<string name="sfz">身份证</string>
	<string name="search">查询</string>
	
	<string name="name">姓名</string>
	<string name="sfzh">身份证号</string>
	<string name="area">社区</string>
	<string name="operate">验证</string>
	
	<string name="total_title">养老保险人员列表</string>
	<string name="verification_title">已验证人员列表</string>
	<string name="no_verification_title">未验证人员列表</string>
	<string name="search_title">查询列表</string>
	
	<string name="total_record">共?条记录</string>
	<string name="curpage_totalpages">1/6</string>
	<string name="lastpage">上一页</string>
	<string name="nextpage">下一页</string>
	<string name="skip">跳转</string>
	
	<string name="skip_to">跳转到第</string>
	<string name="page">页</string>
	<string name="confirm">确定</string>
	<string name="cancle">取消</string>
	<string name="input_skip_pagenum">请输入跳转的页数</string>
	<string name="input_valid_pagenum">请输入有效的页数</string>
	
	<string name="commit">提交</string>
	<string name="recamera">重新拍照</string>
	
	<string name="commit_fail">提交失败</string>
	<string name="commit_success">提交成功</string>
	
	<string name="waiting">等待中...</string>
	<string name="remain_seconds">还剩?秒</string>
	<string name="data_connecting">数据连接中...</string>
	<string name="picture_on_loading">拍照完成，准备摄影……</string>
	
	<string name="data_request_fail">数据访问失败</string>
	<string name="data_request_success">数据访问成功</string>
	
	<string name="photo_download_fail">图片下载失败</string>
	<string name="photo_download_success">图片下载成功</string>
	
	<string name="get_picture_recamera">重拍</string>
	<string name="next">下一步</string>
	<string name="verification_no_pass">验证不通过</string>
	<string name="verification_pass">验证通过</string>
	
	<string name="video_save_fail">视频保存失败</string>
	<string name="video_save_success">视频保存成功</string>
	
	<string name="cur_photo">本次上传的照片</string>
	<string name="before_photoes">之前已验证的照片</string>
	
	<string name="photo_compare_title">照片比对</string>
	<string name="commit_title">提交</string>
	
	<string name="type_select_title">类型选择</string>
	<string name="type_1">养老保险验证</string>
	
	<string name="session_expire">session过期，请重新登录</string>
	<string name="sfzh_below_15">请输入正确的身份证信息</string>
	<string name="check_time_out">比对照片超时</string>

</resources>