<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/rl_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/tv_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_remain_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remain_seconds"
            android:layout_below="@+id/tv_waiting"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_data_connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/data_connecting"
        android:visibility="gone"
        android:textColor="@android:color/white" />
    
    <TextView
        android:id="@+id/tv_picture_on_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/picture_on_loading"
        android:visibility="gone"
        android:textColor="@android:color/white" />

</RelativeLayout>