<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titleback" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/total_title"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@+id/rl_title"
        android:layout_margin="10dip" >

        <TextView
            android:id="@+id/tv_sfz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sfz" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/chaxun" />

        <EditText
            android:id="@+id/et_sfz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_toRightOf="@+id/tv_sfz"
            android:maxLength="18"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/tv_total_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:text="@string/total_record" />

        <TextView
            android:id="@+id/tv_curpage_totalpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/tv_total_record"
            android:text="@string/curpage_totalpages" />

        <Button
            android:id="@+id/btn_lastpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/tv_curpage_totalpage"
            android:background="@drawable/shangyiye" />

        <Button
            android:id="@+id/btn_nextpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/btn_lastpage"
            android:background="@drawable/xiayiye" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/btn_nextpage"
            android:background="@drawable/skip" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_user_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/rl_search" >
    </ListView>

</RelativeLayout>