<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <!-- 使用百度API定位，必须要定义MapView，但又不需要显示 -->

    <com.baidu.mapapi.MapView
        android:id="@+id/map_View"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dip" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/iv_logo"
            android:text="社保自我认证"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/l_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_lang_bg_m"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="218dp"
            android:layout_height="0dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0.02"
            android:background="@null"
            android:height="66dp"
            android:hint="@string/sfzh"
            android:inputType="text"
            android:maxLength="18" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="207dp"
            android:layout_height="46dp"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:ems="3"
            android:height="66dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="10dip" >

        <com.hrcx.selfphotovideocompare.checkview.CheckView
            android:id="@+id/checkView"
            android:layout_width="100dip"
            android:layout_height="40dip" >
        </com.hrcx.selfphotovideocompare.checkview.CheckView>

        <Button
            android:id="@+id/ref"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/checkView"
            android:background="@drawable/kanbuqing" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_marginLeft="60dip"
        android:layout_marginTop="10dip"
        android:hint="@string/code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/button_login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left" >

            <!-- android:id="@id/button_login_register" -->

            <ImageButton
                android:id="@+id/button_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/register"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>